--- a/.h5bprc
+++ b/.h5bprc
@@ -24,7 +24,7 @@
       "js": {
         "bypass": ""
       },
-      "exclude": ".* _.* CNAME bs/** README.markdown readme.md README.md **/.git/** intermediate/** publish/** build/** tasks/",
+      "exclude": ".* _.* CNAME bs/** README.markdown readme.md README.md **/.git/** intermediate/** publish/** build/** tasks/ node_modules/",
       "stylesheets": ""
     },
     "root": {
