--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "url": "git://github.com/lyonjs/lyonjs.github.com.git"
   },
   "dependencies": {
-    "less": "~1.1.4"
+    "less": "~1.1.4",
+    "serve": "~1.0.2",
+    "h5bp-docs": "http://nodeload.github.com/mklabs/h5bp-docs/tarball/master"
   },
-
   "scripts": {
-    "less": "cp ./assets/css/app.css ./assets/css/style.css && ./node_modules/.bin/lessc ./assets/less/bootstrap.less --compress >> ./assets/css/style.css"
+    "less": "cp ./assets/css/app.css ./assets/css/style.css && ./node_modules/.bin/lessc ./assets/less/bootstrap.less --compress >> ./assets/css/style.css",
+    "serve": "./node_modules/.bin/serve",
+    "wikify": "npm run-script less && rm -rf out/ && ./node_modules/.bin/h5bp-docs --config wikify.js"
   }
 }
