--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "url": "git://github.com/lyonjs/lyonjs.github.com.git"
   },
   "dependencies": {
-    "h5bp-docs": "http://nodeload.github.com/mklabs/h5bp-docs/tarball/dev",
+    "h5bp-docs": "http://nodeload.github.com/mklabs/h5bp-docs/tarball/next",
     "ini": "~1.0.2"
   },
   "scripts": {
-    "generate": "node bin/generate --config grunt.js --tasks scripts",
-    "deploy": "node bin/generate --config grunt.js --tasks scripts deploy",
-    "watch": "node bin/generate --config grunt.js --tasks scripts reload",
-    "reload": "node bin/generate --config grunt.js --tasks scripts reload"
+    "install": "git clone git://github.com/lyonjs/lyonjs.github.com.wiki.git",
+    "generate": "node node_modules/h5bp-docs/bin/generate --src lyonjs.github.com.wiki/ --template ../layout/template.html",
+    "postgenerate": "rm -rf _site && mv lyonjs.github.com.wiki/_site . && cp -r public/ _site/",
+    "serve": "cd _site/ && serve",
+    "serve": "cd _site/ && serve"
   }
 }
