--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "fmt": "prettier --write './**/*.js' './**/*.ts'",
+    "fmt:check": "prettier --check './**/*.js' './**/*.ts'"
   },
   "dependencies": {
     "next": "12.1.6",
+    "normalize.css": "8.0.1",
     "react": "18.1.0",
     "react-dom": "18.1.0"
   },
@@ -19,6 +22,8 @@
     "@types/react-dom": "18.0.5",
     "eslint": "8.16.0",
     "eslint-config-next": "12.1.6",
+    "eslint-config-prettier": "8.5.0",
+    "prettier": "2.6.2",
     "typescript": "4.7.2"
   }
 }
