--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "fmt": "prettier --write './**/*.js' './**/*.ts'",
-    "fmt:check": "prettier --check './**/*.js' './**/*.ts'"
+    "fmt": "prettier --write './**/*.js' './**/*.ts' './**/*.tsx'",
+    "fmt:check": "prettier --check './**/*.js' './**/*.ts' './**/*.tsx'"
   },
   "dependencies": {
     "next": "12.1.6",
@@ -23,6 +23,8 @@
     "eslint": "8.16.0",
     "eslint-config-next": "12.1.6",
     "eslint-config-prettier": "8.5.0",
+    "graphql": "^16.5.0",
+    "graphql-request": "^4.3.0",
     "prettier": "2.6.2",
     "typescript": "4.7.2"
   }
