--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "fmt:check": "prettier --check './**/*.js' './**/*.ts' './**/*.tsx'"
   },
   "dependencies": {
+    "dayjs": "^1.11.5",
     "next": "12.1.6",
     "normalize.css": "8.0.1",
     "react": "18.1.0",
@@ -20,12 +21,15 @@
     "@types/node": "17.0.38",
     "@types/react": "18.0.10",
     "@types/react-dom": "18.0.5",
+    "autoprefixer": "^10.4.8",
     "eslint": "8.16.0",
     "eslint-config-next": "12.1.6",
     "eslint-config-prettier": "8.5.0",
     "graphql": "^16.5.0",
     "graphql-request": "^4.3.0",
+    "postcss": "^8.4.16",
     "prettier": "2.6.2",
+    "tailwindcss": "^3.1.8",
     "typescript": "4.7.2"
   }
 }
