--- a/package.json
+++ b/package.json
@@ -11,25 +11,27 @@
     "fmt:check": "prettier --check './**/*.js' './**/*.ts' './**/*.tsx'"
   },
   "dependencies": {
-    "dayjs": "^1.11.5",
+    "dayjs": "^1.11.6",
+    "lodash": "^4.17.21",
     "next": "12.1.6",
     "normalize.css": "8.0.1",
     "react": "18.1.0",
     "react-dom": "18.1.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.187",
     "@types/node": "17.0.38",
     "@types/react": "18.0.10",
     "@types/react-dom": "18.0.5",
-    "autoprefixer": "^10.4.8",
+    "autoprefixer": "^10.4.13",
     "eslint": "8.16.0",
     "eslint-config-next": "12.1.6",
     "eslint-config-prettier": "8.5.0",
-    "graphql": "^16.5.0",
+    "graphql": "^16.6.0",
     "graphql-request": "^4.3.0",
-    "postcss": "^8.4.16",
+    "postcss": "^8.4.18",
     "prettier": "2.6.2",
-    "tailwindcss": "^3.1.8",
+    "tailwindcss": "^3.2.1",
     "typescript": "4.7.2"
   }
 }
