--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "12.1.6",
     "normalize.css": "8.0.1",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-markdown": "^8.0.3"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.187",
