--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "export": "next export",
     "lint": "next lint",
     "fmt": "prettier --write './**/*.js' './**/*.ts' './**/*.tsx'",
     "fmt:check": "prettier --check './**/*.js' './**/*.ts' './**/*.tsx'"
@@ -13,26 +14,26 @@
   "dependencies": {
     "dayjs": "^1.11.6",
     "lodash": "^4.17.21",
-    "next": "12.1.6",
+    "next": "13.0.6",
     "normalize.css": "8.0.1",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-markdown": "^8.0.3"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.187",
-    "@types/node": "17.0.38",
-    "@types/react": "18.0.10",
-    "@types/react-dom": "18.0.5",
+    "@types/node": "18.11.15",
+    "@types/react": "18.0.26",
+    "@types/react-dom": "18.0.9",
     "autoprefixer": "^10.4.13",
-    "eslint": "8.16.0",
-    "eslint-config-next": "12.1.6",
+    "eslint": "8.29.0",
+    "eslint-config-next": "13.0.6",
     "eslint-config-prettier": "8.5.0",
     "graphql": "^16.6.0",
-    "graphql-request": "^4.3.0",
+    "graphql-request": "^5.0.0",
     "postcss": "^8.4.18",
-    "prettier": "2.6.2",
+    "prettier": "2.8.1",
     "tailwindcss": "^3.2.1",
-    "typescript": "4.7.2"
+    "typescript": "4.9.4"
   }
 }
