--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "export": "next export",
     "lint": "next lint",
     "fmt": "prettier --write './**/*.js' './**/*.ts' './**/*.tsx'",
-    "fmt:check": "prettier --check './**/*.js' './**/*.ts' './**/*.tsx'"
+    "fmt:check": "prettier --check './**/*.js' './**/*.ts' './**/*.tsx'",
+    "prepare": "husky install"
   },
   "dependencies": {
     "dayjs": "^1.11.6",
@@ -31,8 +32,10 @@
     "eslint-config-prettier": "8.6.0",
     "graphql": "^16.6.0",
     "graphql-request": "^5.0.0",
+    "husky": "^8.0.0",
     "postcss": "^8.4.18",
     "prettier": "2.8.4",
+    "pretty-quick": "^3.1.3",
     "tailwindcss": "^3.2.1",
     "typescript": "4.9.5"
   }
