--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@mdx-js/loader": "2.3.0",
+    "@mdx-js/react": "2.3.0",
+    "@next/mdx": "13.1.6",
     "dayjs": "^1.11.6",
     "lodash": "^4.17.21",
     "next": "13.1.6",
