--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -11,12 +11,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@main
-      - uses: actions/setup-node@main
       - uses: pnpm/action-setup@v2.2.4
         name: Install pnpm
         with:
           version: 7
-          run_install: true
+      - uses: actions/setup-node@main
+        with:
+          cache: pnpm
+      - run: pnpm install --frozen-lockfile --prefer-offline
       - run: pnpm prettier --check .
 
   nextjs:
@@ -24,12 +26,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@main
-      - uses: actions/setup-node@main
       - uses: pnpm/action-setup@v2.2.4
         name: Install pnpm
         with:
           version: 7
-          run_install: true
+      - uses: actions/setup-node@main
+        with:
+          cache: pnpm
+      - run: pnpm install --frozen-lockfile --prefer-offline
       - run: pnpm build
       - run: pnpm export
         name: NextJs static export
