--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-markdown": "^8.0.3"
   },
   "devDependencies": {
+    "@playwright/test": "^1.31.1",
     "@types/lodash": "^4.14.187",
     "@types/node": "18.14.1",
     "@types/react": "18.0.28",
