--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "autoprefixer": "^10.4.13",
+    "classnames": "2.3.2",
     "eslint": "8.34.0",
     "eslint-config-next": "13.2.0",
     "eslint-config-prettier": "8.6.0",
