--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -12,6 +12,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: pnpm/action-setup@v2.2.4
         name: Install pnpm
+        with:
+          version: 7
       - uses: actions/setup-node@v3
         with:
           node-version: 16
