--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "next lint",
     "fmt": "prettier --write './**/*.js' './**/*.ts' './**/*.tsx'",
     "fmt:check": "prettier --check './**/*.js' './**/*.ts' './**/*.tsx'",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "e2e": "playwright test"
   },
   "dependencies": {
     "@next/mdx": "13.2.0",
@@ -23,6 +24,7 @@
     "react-markdown": "^8.0.3"
   },
   "devDependencies": {
+    "@playwright/test": "^1.31.1",
     "@types/lodash": "^4.14.187",
     "@types/node": "18.14.1",
     "@types/react": "18.0.28",
