--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,12 +1,9 @@
 name: 🎭 Playwright
 on:
-  push:
-    branches: [main, master]
-  pull_request:
-    branches: [main, master]
-jobs:
+  deployment_status:
+
   test:
-    timeout-minutes: 60
+    if: github.event_name == 'deployment_status' && github.event.deployment_status.state == 'success'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -24,6 +21,8 @@ jobs:
         run: pnpm exec playwright install --with-deps chromium
       - name: Run Playwright tests
         run: pnpm exec playwright test
+        env:
+          BASE_URL: ${{ github.event.deployment_status.target_url }}
       - uses: actions/upload-artifact@v3
         if: always()
         with:
