chore: cleanup CI and deploy jobs

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -3,7 +3,7 @@ on:
   pull_request:
   push:
     branches:
-      - 'main'
+      - 'master'
 
 jobs:
   format:
@@ -35,5 +35,3 @@ jobs:
           cache: pnpm
       - run: pnpm install --frozen-lockfile --prefer-offline
       - run: pnpm build
-      - run: pnpm export
-        name: NextJs static export
