--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@vercel/analytics": "^1.0.0",
     "dayjs": "^1.11.7",
     "lodash": "^4.17.21",
+    "motion": "^10.16.4",
     "next": "14.0.4",
     "normalize.css": "8.0.1",
     "react": "18.2.0",
