feat: handle multiple next events

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "next lint",
     "fmt": "prettier --write './**/*.js' './**/*.ts' './**/*.tsx'",
     "fmt:check": "prettier --check './**/*.js' './**/*.ts' './**/*.tsx'",
-    "prepare": "husky install",
+    "prepare": "husky",
     "e2e": "playwright test"
   },
   "dependencies": {
