--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "normalize.css": "8.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-markdown": "^9.0.1"
+    "react-markdown": "^9.0.1",
+    "sharp": "^0.33.3"
   },
   "devDependencies": {
     "@playwright/test": "1.42.1",
