--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^9.0.1",
-    "sharp": "^0.33.3"
+    "sharp": "^0.33.3",
+    "yet-another-react-lightbox": "^3.17.5"
   },
   "devDependencies": {
     "@playwright/test": "1.42.1",
