--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -20,6 +20,7 @@ jobs:
           cache: pnpm
       - run: pnpm install --frozen-lockfile --prefer-offline
       - run: pnpm prettier --check .
+      - run: pnpm lint
 
   nextjs:
     name: ⚛️ NextJS application
