--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "export": "next export",
-    "lint": "next lint",
+    "lint": "oxlint",
     "fmt": "prettier --write './**/*.js' './**/*.ts' './**/*.tsx'",
     "fmt:check": "prettier --check './**/*.js' './**/*.ts' './**/*.tsx'",
     "prepare": "husky",
@@ -36,12 +36,10 @@
     "autoprefixer": "^10.4.16",
     "classnames": "2.5.1",
     "encoding": "^0.1.13",
-    "eslint": "8.57.0",
-    "eslint-config-next": "14.2.3",
-    "eslint-config-prettier": "9.1.0",
     "graphql": "^16.8.1",
     "graphql-request": "^6.1.0",
     "husky": "^9.0.0",
+    "oxlint": "^0.3.1",
     "postcss": "^8.4.32",
     "prettier": "3.2.5",
     "pretty-quick": "^4.0.0",
