--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@next/mdx": "14.2.3",
     "@vercel/analytics": "^1.1.1",
+    "@vercel/speed-insights": "^1.0.10",
     "dayjs": "^1.11.10",
     "lodash": "^4.17.21",
     "motion": "^10.16.4",
