--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "dayjs": "^1.11.10",
     "lodash": "^4.17.21",
     "motion": "^10.16.4",
-    "next": "14.2.3",
+    "next": "^14.2.3",
     "normalize.css": "8.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
