--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: pnpm/action-setup@v4.0.0
         name: Install pnpm
         with:
-          version: 9.4
+          version: 9.4.O
       - uses: actions/setup-node@main
         with:
           cache: pnpm
