--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -9,7 +9,7 @@ jobs:
       - uses: pnpm/action-setup@v4.0.0
         name: Install pnpm
         with:
-          version: 7
+          version: pnpm@9.4.0
       - uses: actions/setup-node@v4
         with:
           node-version: 16
