--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "lyonjs-website",
   "version": "0.1.0",
   "private": true,
+  "packageManager": "pnpm@9.4.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -17,13 +18,14 @@
     "@next/mdx": "14.2.5",
     "@vercel/analytics": "^1.1.1",
     "@vercel/speed-insights": "^1.0.10",
+    "babel-plugin-react-compiler": "0.0.0-experimental-334f00b-20240725",
     "dayjs": "^1.11.10",
     "lodash": "^4.17.21",
     "motion": "^10.16.4",
-    "next": "14.2.5",
+    "next": "15.0.0-rc.0",
     "normalize.css": "8.0.1",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "19.0.0-rc-9d2da591-20240808",
+    "react-dom": "19.0.0-rc-9d2da591-20240808",
     "react-markdown": "^9.0.1",
     "sharp": "^0.33.3",
     "yet-another-react-lightbox": "^3.17.5"
