--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "packageManager": "pnpm@9.15.9",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "export": "next export",
@@ -21,7 +21,7 @@
     "dayjs": "^1.11.13",
     "lodash": "^4.17.21",
     "motion": "^10.18.0",
-    "next": "14.2.23",
+    "next": "15.2.2",
     "normalize.css": "8.0.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
